--- a/09_especies_vegetais/index.html
+++ b/09_especies_vegetais/index.html
@@ -223,6 +223,7 @@
         </div>
         <div class="bloco arboreas">
           <h4>Arbóreas</h4>
+          <p class="visible-xs no-print">Mova a tabela para visualizar o conteúdo.</p>
           <div class="table-responsive">
             <table class="senac">
               <thead>
@@ -363,6 +364,7 @@
         </div>
         <div class="bloco arbustos">
           <h4>Arbustos</h4>
+          <p class="visible-xs no-print">Mova a tabela para visualizar o conteúdo.</p>
           <div class="table-responsive">
             <table class="senac">
               <thead>
@@ -430,6 +432,7 @@
         </div>
         <div class="bloco floriferas">
           <h4>Floríferas</h4>
+          <p class="visible-xs no-print">Mova a tabela para visualizar o conteúdo.</p>
           <div class="table-responsive">
             <table class="senac">
               <thead>
@@ -527,6 +530,7 @@
         </div>
         <div class="bloco frutiferas">
           <h4>Frutíferas</h4>
+          <p class="visible-xs no-print">Mova a tabela para visualizar o conteúdo.</p>
           <div class="table-responsive">
             <table class="senac">
               <thead>
@@ -623,6 +627,7 @@
         </div>
         <div class="bloco herbaceas">
           <h4>Herbáceas</h4>
+          <p class="visible-xs no-print">Mova a tabela para visualizar o conteúdo.</p>
           <div class="table-responsive">
             <table class="senac">
               <thead>
@@ -740,6 +745,7 @@
         </div>
         <div class="bloco horticolas">
           <h4>Hortícolas</h4>
+          <p class="visible-xs no-print">Mova a tabela para visualizar o conteúdo.</p>
           <div class="table-responsive">
             <table class="senac">
               <thead>
@@ -857,6 +863,7 @@
         </div>
         <div class="bloco forracao">
           <h4>Forração</h4>
+          <p class="visible-xs no-print">Mova a tabela para visualizar o conteúdo.</p>
           <div class="table-responsive">
             <table class="senac">
               <thead>
@@ -964,6 +971,7 @@
         </div>
         <div class="bloco gramados">
           <h4>Gramados</h4>
+          <p class="visible-xs no-print">Mova a tabela para visualizar o conteúdo.</p>
           <div class="table-responsive">
             <table class="senac">
               <thead>
@@ -1011,6 +1019,7 @@
         <div class="bloco tendencias">
           <h4>Tendências</h4>
           <p>Veja as plantas queridinhas do <i>urban jungle</i>, estilo de decoração que busca trazer a natureza para dentro dos lares de maneira harmoniosa e integrada à decoração.</p>
+          <p class="visible-xs no-print">Mova a tabela para visualizar o conteúdo.</p>
           <div class="table-responsive">
             <table class="senac">
               <thead>
