--- a/11_projeto_jardinismo/index.html
+++ b/11_projeto_jardinismo/index.html
@@ -426,6 +426,7 @@
                       </div>
                     </div>
                   </div>
+                  
                   <div class="acessivel print">
                     <h4>Contraste</h4>
                     <p>Combinação de elementos que se valorizam e se destacam, como em linhas vertical-horizontal, cheio-vazio, claro-escuro, alto-baixo. Em uma composição vegetal, um exemplo de contraste é a interrupção de plantas com a mesma textura com outra que seja diferente, evitando a monotonia. Diferença de cores também contribui para um contraste e é bastante utilizada quando se trabalha com espécies vegetais.</p>
@@ -865,7 +866,7 @@
                         <p>O proximo passo é indicar as espécies e a forma de distribuição. Lembre-se de que, dependendo da espécie, a planta vai pender mais e se sobrepor às outras. Essa imagem também é entregue no projeto executivo, pois é a partir dela que é feito o plantio, em que cada cor indicará uma planta diferente.</p>
                         <div class="caixa-destaque-livre">E este seria o resultado final, com o plantio das espécies.</div>
                       </div>
-                      <img src="objetos/Figura20.jpg" class="center-block">
+                      <img src="objetos/Figura20.jpg" class="center-block jardim-vertical">
                       <p class="legenda-imagem">
                         Planejamento para o jardim vertical <br>
                         Fonte: Czerwinski (2018)
