--- a/11_projeto_jardinismo/index.html
+++ b/11_projeto_jardinismo/index.html
@@ -366,11 +366,11 @@
                           <div class='panel-body'>
                             <p>É possível sentir o equilíbrio como uma linha imaginária, como se estivesse dividindo elementos ou o espaço físico. Se houver o mesmo peso visual, será simétrico; se for com elementos diferentes, será um equilíbrio assimétrico.</p>
                             <div class="row div-fig09">
-                              <div class="col-sm-5 col-xs-12">
+                              <div class="col-sm-6 col-xs-12">
                                 <img src="objetos/Figura09_1.jpg" class="img-responsive center-block">
                                 <p class="legenda-imagem">Equilíbrio simétrico</p>
                               </div>
-                              <div class="col-sm-7 col-xs-12">
+                              <div class="col-sm-6 col-xs-12">
                                 <img src="objetos/Figura09_2.jpg" class="img-responsive center-block">
                                 <p class="legenda-imagem">Equilíbrio assimétrico</p>
                               </div>
@@ -562,6 +562,7 @@
                   <p>As cotas são necessárias para o correto posicionamento (quando preciso), assim como as quantidades de espécie e as distâncias de plantio. Olivo e Mano (2019) relatam que o projeto é finalizado com o desenho da planta baixa e o memorial descritivo. Para o projeto executivo, pode-se também apresentar o <i>render</i> do projeto, mostrando todo o ambiente, os acabamentos e as plantas. É com essa forma de apresentação que o cliente terá uma ideia de como o espaço ficará quando estiver pronto. Confira alguns exemplos:</p>
                   <div class="no-print" aria-hidden="true">
                     <p>Clique ou toque nas setas para visualizar o conteúdo.</p>
+                    <p class="visible-sm visible-xs">Toque na imagem para ampliá-la.</p>
                     <div id="carousel1" class="carousel slide no-print" data-ride="carousel" data-interval="false" aria-hidden="true">
                       <ol class="carousel-indicators">
                         <li data-target="#carousel1" data-slide-to="0" class="active"></li>
@@ -571,16 +572,20 @@
                       </ol>
                       <div class="carousel-inner" role="listbox">
                         <div class="item active">
-                          <img src="objetos/Figura16_1.PNG" class="img-responsive center-block borda-imagem">
+                          <img src="objetos/Figura16_1.PNG" class="img-responsive center-block borda-imagem hidden-sm hidden-xs">
+                          <a href="objetos/Figura16_1.PNG" target="_blank" class="visible-sm visible-xs"><img src="objetos/Figura16_1.PNG" class="center-block img-responsive"></a>
                         </div>
                         <div class="item">
-                          <img src="objetos/Figura16_2.PNG" class="img-responsive center-block borda-imagem">
+                          <img src="objetos/Figura16_2.PNG" class="img-responsive center-block borda-imagem hidden-sm hidden-xs">
+                          <a href="objetos/Figura16_2.PNG" target="_blank" class="visible-sm visible-xs"><img src="objetos/Figura16_2.PNG" class="center-block img-responsive"></a>
                         </div>
                         <div class="item">
-                          <img src="objetos/Figura16_3.PNG" class="img-responsive center-block borda-imagem">
+                          <img src="objetos/Figura16_3.PNG" class="img-responsive center-block borda-imagem hidden-sm hidden-xs">
+                          <a href="objetos/Figura16_3.PNG" target="_blank" class="visible-sm visible-xs"><img src="objetos/Figura16_3.PNG" class="center-block img-responsive"></a>
                         </div>
                         <div class="item">
-                          <img src="objetos/Figura16_4.PNG" class="img-responsive center-block borda-imagem">
+                          <img src="objetos/Figura16_4.PNG" class="img-responsive center-block borda-imagem hidden-sm hidden-xs">
+                          <a href="objetos/Figura16_4.PNG" target="_blank" class="visible-sm visible-xs"><img src="objetos/Figura16_4.PNG" class="center-block img-responsive"></a>
                         </div>
                       </div>
                       <a class="left carousel-control" href="#carousel1" role="button" data-slide="prev">
@@ -599,7 +604,7 @@
                   <p>Figueiredo (2021) destaca ainda que as plantas mais utilizadas em espaços interiores são as plantas ornamentais, e que dentro dessa nomenclatura existem alguns tipos diferentes de vegetação, como herbáceas, trepadeiras e arbustos.</p>
                   <p>Ao indicar o nome da planta, lembre-se de ser o mais específico possível, utilizando o nome científico completo, pois apenas o primeiro nome pode gerar certa confusão na escolha das espécies. Observe estas plantas e note a diferença nas folhas e nas cores, apesar de todas serem conhecidas como fícus:</p>
                   <div class="row">
-                    <div class="col-sm-4 col-xs-12">
+                    <div class="col-sm-12 col-xs-12">
                       <img src="objetos/Figura17_1.PNG" class="img-responsive center-block">
                       <p class="acessivel no-print">
                         Nome científico: fícus elástica rubro <br>
@@ -607,7 +612,7 @@
                         Tamanho aproximado da planta: 90 cm
                       </p>
                     </div>
-                    <div class="col-sm-4 col-xs-12">
+                    <div class="col-sm-12 col-xs-12">
                       <img src="objetos/Figura17_2.PNG" class="img-responsive center-block">
                       <p class="acessivel no-print">
                         Nome científico: fícus lyrata <br>
@@ -615,7 +620,7 @@
                         Tamanho aproximado da planta: 50 cm
                       </p>
                     </div>
-                    <div class="col-sm-4 col-xs-12">
+                    <div class="col-sm-12 col-xs-12">
                       <img src="objetos/Figura17_3.PNG" class="img-responsive center-block">
                       <p class="acessivel no-print">
                         Nome científico: fícus elástica tricolor <br>
