--- a/01_design_passivo/index.html
+++ b/01_design_passivo/index.html
@@ -176,10 +176,9 @@
             acústico e o que são a insolação e a ventilação, e como elas podem
             contribuir para um <i>design</i> mais sustentável.
           </p>
-          <h1>Espera para vídeo 1</h1>
-          <video></video>
-          <h1>Espera para vídeo 2</h1>
-          <video></video>
+          <iframe class="video-youtube" width="560" height="315" src="https://www.youtube.com/embed/moVYH0mQIug?si=IrdcMAr7zQfiwO49" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+
+          <iframe class="video-youtube" width="560" height="315" src="https://www.youtube.com/embed/oTLrC9GvcO4?si=k5F-VHhYauH8rFFq" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
 
           <div class="acessivel print">
             <h3>Conforto térmico em ambientes internos</h3>
