--- a/05_re-design_materiais/index.html
+++ b/05_re-design_materiais/index.html
@@ -99,10 +99,38 @@
             
             <div class="destaque_links">
               <img src="imgs/audio.png" class="img-pessoa hidden-xs no-print">
-              <i>Redesign:</i> <a href="https://pt.forvo.com/search/redesign/en_uk/" target="_blank">https://pt.forvo.com/search/redesign/en_uk/</a><br>
-              <i>Upcycle:</i> <a href="https://pt.forvo.com/search/upcycle/" target="_blank">https://pt.forvo.com/search/upcycle/</a><br>
-              <i>Retrofit:</i> <a href="https://pt.forvo.com/search/retrofit/en_usa/" target="_blank">https://pt.forvo.com/search/retrofit/en_usa/</a><br>
-              <i>Upcycling:</i> <a href="https://pt.forvo.com/search/upcycling/" target="_blank">https://pt.forvo.com/search/upcycling/</a>
+              <div class="audio">
+                <i>Redesign:</i> 
+                <span class="audio-word">
+                  <audio controls class="no-print" aria-hidden="true">
+                    <source src="audio/Redesign.mp3" type="audio/mpeg" />
+                  </audio>
+                </span>
+              </div>
+              <div class="audio">
+                <i>Upcycle:</i> 
+                <span class="audio-word">
+                  <audio controls class="no-print" aria-hidden="true">
+                    <source src="audio/Upcycle.mp3" type="audio/mpeg" />
+                  </audio>
+                </span>
+              </div>
+              <div class="audio">
+                <i>Retrofit:</i>
+                <span class="audio-word">
+                  <audio controls class="no-print" aria-hidden="true">
+                    <source src="audio/Retrofit.mp3" type="audio/mpeg" />
+                  </audio>
+                </span>
+              </div>
+              <div class="audio">
+                <i>Upcycling:</i>
+                <span class="audio-word">
+                  <audio controls class="no-print" aria-hidden="true">
+                    <source src="audio/Upcycling.mp3" type="audio/mpeg" />
+                  </audio>
+                </span>
+              </div>
             </div>
 
             <p>O conceito de <i>redesign</i>  tem ganhado destaque no campo do <i>design</i> sustentável, oferecendo uma abordagem inovadora para a criação de espaços funcionais, esteticamente agradáveis e ambientalmente responsáveis. Nesse texto, o <i>redesign</i> e suas diversas facetas serão explorados em detalhes, incluindo a seleção consciente de materiais e as técnicas de <i>upcycle</i>, <i>retrofit</i> e customização. Além disso, serão abordadas a aplicação do <i>redesign</i> em projetos reais e a importância dos selos de garantias para certificar a sustentabilidade de produtos. Você compreenderá como esses elementos se entrelaçam para promover a conservação de recursos naturais, a redução de desperdícios e a construção de um futuro mais equilibrado e consciente.</p>
