ajuste titulos kanbam

--- a/index.html
+++ b/index.html
@@ -119,7 +119,7 @@
                   href="01_design_passivo/index.html"
                   target="_blank"
                   class="link"
-                  >2 - <i>Design</i> Passivo: insolação, conforto térmico e
+                  >2 - <i>Design</i> passivo: insolação, conforto térmico e
                   acústico, umidade e ventilação</a
                 >
               </p>
@@ -152,7 +152,7 @@
                   href="07_design_biofilico/index.html"
                   target="_blank"
                   class="link"
-                  >3 – <i>Design</i> Biofílico: princípios e aplicações
+                  >3 – <i>Design</i> biofílico: princípios e aplicações
                 </a>
               </p>
               <div class="dropdown dropdown-bubble">
@@ -416,7 +416,7 @@
                   href="05_re-design_materiais/index.html"
                   target="_blank"
                   class="link"
-                  >2 - <i>Re-design</i>: materiais, técnicas (<i>upcycle</i>,
+                  >2 - <i>Redesign</i>: materiais, técnicas (<i>upcycle</i>,
                   <i>retrofit</i> e customização), projetos e selos de garantias
                 </a>
               </p>
@@ -507,7 +507,7 @@
                   href="08_urban_jungle/index.html"
                   target="_blank"
                   class="link"
-                  >2 – <i>Urban Jungle</i>: contexto e conceito
+                  >2 – <i>Urban jungle</i>: contexto e conceito
                 </a>
               </p>
               <div class="dropdown dropdown-bubble">
