--- a/index.html
+++ b/index.html
@@ -184,8 +184,8 @@
                   href="06_meio_ambiente/index.html"
                   target="_blank"
                   class="link"
-                  >4 - Meio ambiente: tipos e características dos biomas e
-                  plantas nativas
+                  >4 - Meio ambiente: tipos e características dos biomas e das
+                  plantas nativas brasileiras
                 </a>
               </p>
               <div class="dropdown dropdown-bubble">
@@ -255,8 +255,8 @@
               <p>
                 <a href="10_jardins/index.html" target="_blank" class="link"
                   >1 – Jardins: estilos, tipos (verticais e internos),
-                  materiais, elementos não vegetais (vasos, suportes, cachepot e
-                  cestos), composições paisagísticas e tendências. </a
+                  materiais, elementos não vegetais (vasos, suportes, cachepôs e
+                  cestos), composições paisagísticas e tendências</a
                 >
               </p>
               <div class="dropdown dropdown-bubble">
@@ -384,7 +384,7 @@
                   href="04_modelos_consumo/index.html"
                   target="_blank"
                   class="link"
-                  >1 - Modelos de consumo (conhecimento 4)</a
+                  >1 - Modelos de consumo</a
                 >
               </p>
               <div class="dropdown dropdown-bubble">
