--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
                   href="02_sustentabilidade_nos_ambientes/index.html"
                   target="_blank"
                   class="link"
-                  >1 – Sustentabilidade nos ambientes construídos
+                  >1 - Sustentabilidade nos ambientes construídos
                 </a>
               </p>
               <div class="dropdown dropdown-bubble">
@@ -152,7 +152,7 @@
                   href="07_design_biofilico/index.html"
                   target="_blank"
                   class="link"
-                  >3 – <i>Design</i> biofílico: princípios e aplicações
+                  >3 - <i>Design</i> biofílico: princípios e aplicações
                 </a>
               </p>
               <div class="dropdown dropdown-bubble">
@@ -254,7 +254,7 @@
             >
               <p>
                 <a href="10_jardins/index.html" target="_blank" class="link"
-                  >1 – Jardins: estilos, tipos (verticais e internos),
+                  >1 - Jardins: estilos, tipos (verticais e internos),
                   materiais, elementos não vegetais (vasos, suportes, cachepôs e
                   cestos), composições paisagísticas e tendências</a
                 >
@@ -320,7 +320,7 @@
                   href="11_projeto_jardinismo/index.html"
                   target="_blank"
                   class="link"
-                  >3– Projeto de jardinismo: Etapas, <i>briefing</i>,
+                  >3 - Projeto de jardinismo: Etapas, <i>briefing</i>,
                   levantamento de dados, plano de massa, estudo preliminar,
                   anteprojeto, projeto executivo de plantio e memorial
                   descritivo
@@ -474,7 +474,7 @@
             >
               <p>
                 <a href="03_industria/index.html" target="_blank" class="link"
-                  >1 - Indústria: Mudança de modelo mental e soluções
+                  >1 - Indústria: mudança de modelo mental e soluções
                   tecnológicas
                 </a>
               </p>
@@ -507,7 +507,7 @@
                   href="08_urban_jungle/index.html"
                   target="_blank"
                   class="link"
-                  >2 – <i>Urban jungle</i>: contexto e conceito
+                  >2 - <i>Urban jungle</i>: contexto e conceito
                 </a>
               </p>
               <div class="dropdown dropdown-bubble">
