--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
                   href="02_sustentabilidade_nos_ambientes/index.html"
                   target="_blank"
                   class="link"
-                  >1 - Sustentabilidade nos ambientes construídos
+                  >1. Sustentabilidade nos ambientes construídos
                 </a>
               </p>
               <div class="dropdown dropdown-bubble">
@@ -119,8 +119,8 @@
                   href="01_design_passivo/index.html"
                   target="_blank"
                   class="link"
-                  >2 - <i>Design</i> passivo: insolação, conforto térmico e
-                  acústico, umidade e ventilação</a
+                  >2. <i>Design</i> passivo: insolação, conforto térmico e
+                  acústico e ventilação</a
                 >
               </p>
               <div class="dropdown dropdown-bubble">
@@ -152,7 +152,7 @@
                   href="07_design_biofilico/index.html"
                   target="_blank"
                   class="link"
-                  >3 - <i>Design</i> biofílico: princípios e aplicações
+                  >3. <i>Design</i> biofílico: princípios e aplicações
                 </a>
               </p>
               <div class="dropdown dropdown-bubble">
@@ -184,7 +184,7 @@
                   href="06_meio_ambiente/index.html"
                   target="_blank"
                   class="link"
-                  >4 - Meio ambiente: tipos e características dos biomas e das
+                  >4. Meio ambiente: tipos e características dos biomas e das
                   plantas nativas brasileiras
                 </a>
               </p>
@@ -254,9 +254,9 @@
             >
               <p>
                 <a href="10_jardins/index.html" target="_blank" class="link"
-                  >1 - Jardins: estilos, tipos (verticais e internos),
-                  materiais, elementos não vegetais (vasos, suportes, cachepôs e
-                  cestos), composições paisagísticas e tendências</a
+                  >1. Jardins: estilos, tipos (verticais e internos), materiais,
+                  elementos não vegetais (vasos, suportes, cachepôs e cestos),
+                  composições paisagísticas e tendências</a
                 >
               </p>
               <div class="dropdown dropdown-bubble">
@@ -288,7 +288,7 @@
                   href="09_especies_vegetais/index.html"
                   target="_blank"
                   class="link"
-                  >2 - Espécies vegetais</a
+                  >2. Espécies vegetais</a
                 >
               </p>
               <div class="dropdown dropdown-bubble">
@@ -320,7 +320,7 @@
                   href="11_projeto_jardinismo/index.html"
                   target="_blank"
                   class="link"
-                  >3 - Projeto de jardinismo: Etapas, <i>briefing</i>,
+                  >3. Projeto de jardinismo: etapas, <i>briefing</i>,
                   levantamento de dados, plano de massa, estudo preliminar,
                   anteprojeto, projeto executivo de plantio e memorial
                   descritivo
@@ -384,7 +384,7 @@
                   href="04_modelos_consumo/index.html"
                   target="_blank"
                   class="link"
-                  >1 - Modelos de consumo</a
+                  >1. Modelos de consumo</a
                 >
               </p>
               <div class="dropdown dropdown-bubble">
@@ -416,7 +416,7 @@
                   href="05_re-design_materiais/index.html"
                   target="_blank"
                   class="link"
-                  >2 - <i>Redesign</i>: materiais, técnicas (<i>upcycle</i>,
+                  >2. Redesign: materiais, técnicas (<i>upcycle</i>,
                   <i>retrofit</i> e customização), projetos e selos de garantias
                 </a>
               </p>
@@ -474,7 +474,7 @@
             >
               <p>
                 <a href="03_industria/index.html" target="_blank" class="link"
-                  >1 - Indústria: mudança de modelo mental e soluções
+                  >1. Indústria: mudança de modelo mental e soluções
                   tecnológicas
                 </a>
               </p>
@@ -507,7 +507,7 @@
                   href="08_urban_jungle/index.html"
                   target="_blank"
                   class="link"
-                  >2 - <i>Urban jungle</i>: contexto e conceito
+                  >2. <i>Urban jungle</i>: contexto e conceito
                 </a>
               </p>
               <div class="dropdown dropdown-bubble">
