insercao figuras na versao impressao conhecimento 5

--- a/05_re-design_materiais/index.html
+++ b/05_re-design_materiais/index.html
@@ -390,7 +390,7 @@
 
             <img src="imgs/figura_5.png" class="center-block img-responsive hidden-sm hidden-xs" alt="A imagem traz como elemento central um círculo no qual está escrito “Produção e consumo sustentável”. No entorno desse círculo existem os termos: “Gerenciamento de recursos sólidos”, “Manejo sustentável de recursos”, “Design para sustentabilidade”, “Produção mais limpa e eficiência de recursos”, “Transporte sustentável”, “Rotulagem ambiental e certificação”, “Compras públicas sustentáveis”, “Mercados sustentáveis” e “Estilos de vida sustentáveis”.">
             <p class="no-print visible-sm visible-xs" aria-hidden="true">Toque na imagem para ampliá-la.</p>
-            <a href="imgs/figura_5.png" target="_blank" class="no-print visible-sm visible-xs" aria-hidden="true"><img src="imgs/figura_5.png" class="center-block img-responsive"></a>
+            <a href="imgs/figura_5.png" target="_blank" class="visible-sm visible-xs" aria-hidden="true"><img src="imgs/figura_5.png" class="center-block img-responsive"></a>
             <p class="legenda-imagem">
               Produção e consumo sustentáveis Fonte: Trindade <br>
               Fonte: Trindade (s. d.)
@@ -398,7 +398,7 @@
             <p>Mais recentemente, a Cúpula das Nações Unidas sobre o Desenvolvimento Sustentável, ocorrida em setembro de 2015 em Nova Iorque, definiu os 17 novos Objetivos de Desenvolvimento Sustentável (ODS) como parte da Agenda 2030 para o Desenvolvimento Sustentável (Franco Pereira; Del Gaudio, 2021, p. 18).</p>
             <img src="imgs/Figura_6.png" class="center-block img-responsive hidden-sm hidden-xs" alt="No alto da imagem há o título “Objetivos de desenvolvimento sustentável”. Abaixo existem cards com pictogramas indicando “Erradicação da pobreza”, “Fome zero”, “Boa saúde e bem-estar”, “Educação de qualidade”, “Igualdade de gênero”, “Água limpa e saneamento”, “Energia acessível e limpa”, “Emprego digno e crescimento econômico”, “Indústria, inovação e infraestrutura”, “Redução das desigualdades”, “Cidades e comunidades sustentáveis”, “Consumo e produção responsáveis”, “Combate às alterações climáticas”, “Vida debaixo d´agua”, “Vida sobre a terra”, “Paz, justiça e instituições fortes” e “Parcerias em prol das metas”.">
             <p class="no-print visible-sm visible-xs" aria-hidden="true">Toque na imagem para ampliá-la.</p>
-            <a href="imgs/Figura_6.png" target="_blank" class="no-print visible-sm visible-xs" aria-hidden="true"><img src="imgs/Figura_6.png" class="center-block img-responsive"></a>
+            <a href="imgs/Figura_6.png" target="_blank" class="visible-sm visible-xs" aria-hidden="true"><img src="imgs/Figura_6.png" class="center-block img-responsive"></a>
             <p class="legenda-imagem">
               17 objetivos de desenvolvimento sustentável <br>
               Fonte: Grupo de Trabalho da Sociedade Civil para a Agenda 2030 do Desenvolvimento Sustentável (s. d.)
