--- a/05_re-design_materiais/index.html
+++ b/05_re-design_materiais/index.html
@@ -335,11 +335,12 @@
               <p>A ideia central do <i>upcycle</i> é dar uma nova vida e finalidade a itens que seriam considerados lixo, transformando-os em produtos de qualidade, muitas vezes com apelo artístico ou criativo. Esse processo de transformação pode envolver restauração, reformulação, combinação de diferentes elementos ou até mesmo a criação de peças únicas e personalizadas.</p>
               <p>O <i>upcycle</i> tem ganhado popularidade como uma abordagem mais sustentável para lidar com o desperdício, uma vez que ajuda a reduzir o volume de resíduos que vão para aterros sanitários e contribui para a economia circular. Além disso, o upcycle incentiva a criatividade e a consciência ambiental, ao destacar o valor de materiais que seriam descartados e oferecer alternativas mais ecológicas para a produção de novos itens.</p>
               <p>Confira nas imagens que novos usos e funções podem ser dados a objetos descartados, como garrafas de vidro que se transformam em luminárias, ou esquadrias que foram substituídas e podem ter novas funções, como se transformar em móveis.<br></p>
-              <img src="imgs/figura_1.jpg" class="center-block img-responsive" alt="A figura mostra duas imagens. Na imagem “a” há um dormitório com cama sem estrado, iluminada com entrada lateral de luz. Sobre a cama existem almofadas e no chão há um tapete sob piso laminado. Perto do observador há um biombo feito de esquadrias de janelas antigas, feitas em madeira. Na figura “b” há garrafas de vidro de diferentes formatos e cores, transformadas em luminárias pendentes. ">
+              <img src="imgs/figura_1.jpg" class="center-block img-responsive">
               <p class="legenda-imagem">
                 Exemplos de materiais renováveis <br>
                 Fonte: a) Moviflor (2022); b) Can Stock Photo (2023)
               </p>
+              <p class="no-print">A figura mostra duas imagens. Na imagem “a” há um dormitório com cama sem estrado, iluminada com entrada lateral de luz. Sobre a cama existem almofadas e no chão há um tapete sob piso laminado. Perto do observador há um biombo feito de esquadrias de janelas antigas, feitas em madeira. Na figura “b” há garrafas de vidro de diferentes formatos e cores, transformadas em luminárias pendentes.</p>
               <p>Percebe-se o poder transformador dessa abordagem sustentável. O <i>upcycle</i> leva as pessoas a repensarem o seu relacionamento com os objetos e materiais que as cercam, enxergando-os não apenas como descartáveis, mas como recursos valiosos com potencial infinito.</p>
               <p>Nesse processo criativo de dar nova vida ao que poderia ser considerado resíduo, o <i>upcycle</i> explora a imaginação e as habilidades, permitindo às pessoas resgatarem a beleza escondida na simplicidade e na originalidade de cada peça.</p>
               <p>Ao adotar o <i>upcycle</i> em suas vidas, contribui-se para a construção de uma sociedade mais consciente e responsável com o meio ambiente. Cada pequena ação de <i>upcycle</i> torna-se uma gota no oceano da mudança, demonstrando que é possível adotar práticas mais sustentáveis nos hábitos cotidianos das pessoas.</p>
@@ -349,19 +350,19 @@
               <p>No <i>retrofit</i> de interiores, podem ser feitas alterações na disposição dos móveis, na iluminação, na escolha de revestimentos, na incorporação de sistemas tecnológicos, entre outras mudanças, sempre buscando equilibrar o respeito ao patrimônio histórico e a integração de soluções modernas.</p>
               <p>Essa abordagem valoriza a sustentabilidade ao reutilizar e renovar espaços existentes em vez de construir algo completamente novo, contribuindo para a redução do desperdício e da demanda por novos materiais. Além disso, o <i>retrofit</i> no <i>design</i> de interiores pode trazer um charme especial ao espaço, combinando elementos históricos com um toque contemporâneo, criando ambientes únicos e cheios de personalidade.</p>
               <p>No <i>design</i> de interiores encontram-se vários <i>cases</i> nos quais ocorre a prática do <i>retrofit</i>. Você já deve ter visto ou ouvido falar da transformação de antigos armazéns em <i>lofts</i> modernos, não é? Isso é <i>retrofit</i>! Quando esses espaços são reformados, sendo a estrutura original de tijolos expostos e as vigas de aço mantidas enquanto os interiores são atualizados com acabamentos contemporâneos, móveis elegantes e iluminação moderna, isso é um caso clássico de readequação de um espaço antigo para um novo uso.</p>
-              <img src="imgs/figura_2.jpg" class="center-block img-responsive" alt="Na imagem há um amplo espaço em que há apenas uma escada que segue para um mezanino, ambos em metal. O piso é de cimento e as paredes de tijolo. O pé direito é duplo e há uma grande entrada de luz pelo lado direito da imagem. ">
+              <img src="imgs/figura_2.jpg" class="center-block img-responsive">
               <p class="legenda-imagem">
                 Antigo armazém <br>
                 Fonte: Freepik (2023)
               </p>
+              <p class="no-print">Na imagem há um amplo espaço em que há apenas uma escada que segue para um mezanino, ambos em metal. O piso é de cimento e as paredes de tijolo. O pé direito é duplo e há uma grande entrada de luz pelo lado direito da imagem.</p>
               <p>Outro exemplo clássico é a reforma de uma casa histórica. Uma casa antiga com características arquitetônicas únicas pode ser reformada para preservar sua história e seu charme. Elementos como portas ornamentadas, pisos de madeira antigos e molduras podem ser restaurados, enquanto os espaços internos são reconfigurados para atender às necessidades dos moradores atuais.</p>
-              <img src="imgs/figura_3.jpg" class="center-block img-responsive" alt="Na imagem há uma casa antiga de esquina, com amplas janelas, e algumas construções ao redor. A casa tem os tijolos à vista e no centro da imagem aparecem mãos posicionando uma moldura vazada em frente à casa. 
-
-              ">
+              <img src="imgs/figura_3.jpg" class="center-block img-responsive">
               <p class="legenda-imagem">
                 Casa antiga <br>
                 Fonte: Freepik (2023)
               </p>
+              <p class="no-print">Na imagem há uma casa antiga de esquina, com amplas janelas, e algumas construções ao redor. A casa tem os tijolos à vista e no centro da imagem aparecem mãos posicionando uma moldura vazada em frente à casa.</p>
               <p>
                 Esses são apenas alguns exemplos de como o retrofit no <i>design</i> de interiores pode ser aplicado para reutilizar e renovar espaços existentes, criando ambientes únicos que combinam elementos do passado com funcionalidades contemporâneas
               </p>
@@ -376,11 +377,12 @@
               <p>Permite ao cliente selecionar os materiais e acabamentos que melhor se alinham ao seu estilo, como pisos, revestimentos, pinturas, papéis de parede, entre outros.</p>
               <h4>Decoração e objetos pessoais</h4>
               <p> A customização também inclui a incorporação de objetos decorativos, arte e itens pessoais que representem a história, memórias e preferências do cliente, tornando o ambiente mais acolhedor e autêntico.</p>
-              <img src="imgs/figura_4.jpg" class="center-block img-responsive" alt="Na imagem há um antigo receptor de rádio de luxo. Sobre ele há um pequeno vaso de flores em metal, com flores delicadas na cor roxa. Atrás do móvel há um fundo escuro e o piso é de madeira, com tapete acinzentado próximo ao receptor. ">
+              <img src="imgs/figura_4.jpg" class="center-block img-responsive">
               <p class="legenda-imagem">
                 Antigo receptor de rádio de luxo <br>
                 Fonte: Freepik (2023)
               </p>
+              <p class="no-print">Na imagem há um antigo receptor de rádio de luxo. Sobre ele há um pequeno vaso de flores em metal, com flores delicadas na cor roxa. Atrás do móvel há um fundo escuro e o piso é de madeira, com tapete acinzentado próximo ao receptor.</p>
               <p>A customização no <i>design</i> de interiores é uma forma de criar espaços verdadeiramente exclusivos e que atendam às necessidades e desejos individuais dos clientes. Essa abordagem envolve uma estreita colaboração entre o <i>designer</i> e o cliente, garantindo que o resultado final seja um espaço que conte a história e atenda aos sonhos daqueles que o desfrutarão.</p>
             </div>
 
