Colocando botão para abrir objeto

--- a/02_sustentabilidade_nos_ambientes/index.html
+++ b/02_sustentabilidade_nos_ambientes/index.html
@@ -1020,10 +1020,19 @@
                 <p>
                   Clique para acessar o simulador.
                 </p>
-
-                <h2>
-                  DESIGN/DIAGRAMAÇÃO: DEIXAR ESPERA PARA SIMULADOR – CASA SUSTENTÁVEL
-                </h2>
+                <style>
+                  .bto-casa-se {
+                    transition: 0.35s;
+                    transform: scale(1);
+                  }
+                  .bto-casa-se:hover {
+                    transition: 0.35s;
+                    transform: scale(1.05);
+                  }
+                </style>
+                <a href="objeto/casa-sustentavel/index.html" target="_blank" style="margin: 0px; padding: 0px; text-decoration: none;">
+                  <img src="imgs/bto-casa-sustentavel.png" class="bto-casa-se img-fluid" style="max-width: 350px !important; margin-left: auto; margin-right: auto; display: block;" alt="">
+                </a>
 
               </div>
             </div>
