--- a/04_modelos_consumo/index.html
+++ b/04_modelos_consumo/index.html
@@ -349,7 +349,7 @@
                           </p>
                           <img
                             src="imgs/figura_1.jpg"
-                            class="center-block img-responsive hidden-sm hidden-xs print"
+                            class="center-block img-responsive hidden-sm hidden-xs print w-70"
                           />
                           <p
                             class="no-print visible-sm visible-xs"
@@ -403,7 +403,7 @@
                           <div class="modal-footer">
                             <button
                               type="button"
-                              class="btn"
+                              class="btn btn-default"
                               data-dismiss="modal"
                             >
                               Fechar
@@ -445,7 +445,7 @@
                           </p>
                           <img
                             src="imgs/figura_2.jpg"
-                            class="center-block img-responsive hidden-sm hidden-xs print"
+                            class="center-block img-responsive hidden-sm hidden-xs print w-70"
                           />
                           <p
                             class="no-print visible-sm visible-xs"
@@ -488,7 +488,7 @@
                           <div class="modal-footer">
                             <button
                               type="button"
-                              class="btn"
+                              class="btn btn-default"
                               data-dismiss="modal"
                             >
                               Fechar
@@ -530,7 +530,7 @@
                           </p>
                           <img
                             src="imgs/figura_3.jpg"
-                            class="center-block img-responsive hidden-sm hidden-xs print"
+                            class="center-block img-responsive hidden-sm hidden-xs print w-70"
                           />
                           <p
                             class="no-print visible-sm visible-xs"
@@ -563,7 +563,7 @@
                           <div class="modal-footer">
                             <button
                               type="button"
-                              class="btn"
+                              class="btn btn-default"
                               data-dismiss="modal"
                             >
                               Fechar
@@ -605,7 +605,7 @@
                           </p>
                           <img
                             src="imgs/figura_4.jpg"
-                            class="center-block img-responsive hidden-sm hidden-xs print"
+                            class="center-block img-responsive hidden-sm hidden-xs print w-70"
                           />
                           <p
                             class="no-print visible-sm visible-xs"
@@ -641,7 +641,7 @@
                           <div class="modal-footer">
                             <button
                               type="button"
-                              class="btn"
+                              class="btn btn-default"
                               data-dismiss="modal"
                             >
                               Fechar
@@ -682,7 +682,7 @@
                           </p>
                           <img
                             src="imgs/figura_5.jpg"
-                            class="center-block img-responsive hidden-sm hidden-xs print"
+                            class="center-block img-responsive hidden-sm hidden-xs print w-70"
                           />
                           <p
                             class="no-print visible-sm visible-xs"
@@ -773,7 +773,7 @@
                                     </p>
                                     <img
                                       src="imgs/figura_6.jpg"
-                                      class="center-block img-responsive hidden-sm hidden-xs print"
+                                      class="center-block img-responsive hidden-sm hidden-xs print w-70"
                                     />
                                     <p
                                       class="no-print visible-sm visible-xs"
@@ -856,7 +856,7 @@
                           <div class="modal-footer">
                             <button
                               type="button"
-                              class="btn"
+                              class="btn btn-default"
                               data-dismiss="modal"
                             >
                               Fechar
@@ -910,7 +910,7 @@
                           <div class="modal-footer">
                             <button
                               type="button"
-                              class="botao borda-primaria-03"
+                              class="btn btn-default"
                               data-dismiss="modal"
                             >
                               Fechar
@@ -1212,7 +1212,7 @@
               </p>
               <img
                 src="imgs/figura_7.jpg"
-                class="center-block img-responsive hidden-sm hidden-xs print"
+                class="center-block img-responsive hidden-sm hidden-xs print w-70"
               />
               <p class="no-print visible-sm visible-xs" aria-hidden="true">
                 Toque na imagem para ampliá-la.
@@ -1322,7 +1322,7 @@
               </p>
               <img
                 src="imgs/figura_9.jpg"
-                class="center-block img-responsive hidden-sm hidden-xs print"
+                class="center-block img-responsive hidden-sm hidden-xs print w-70"
               />
               <p class="no-print visible-sm visible-xs" aria-hidden="true">
                 Toque na imagem para ampliá-la.
