--- a/10_jardins/index.html
+++ b/10_jardins/index.html
@@ -742,9 +742,9 @@
               <div id="collapseOne" class="panel-collapse collapse in" role="tabpanel" aria-labelledby="headingOne">
                 <div class="panel-body">
                   <p>O jardim vertical tornou-se tendência por trazer a natureza e o verde para pequenos espaços, como estudado anteriormente.</p>
-                  <img src="imgs/figura_30.jpg" class="center-block img-responsive hidden-sm hidden-xs w-5" alt="A imagem mostra uma varanda com piso de pedra branca e um caminho demarcado com deques de madeira escura. Ao fundo da imagem e na lateral direita encontram-se plantas de espécies variadas em vasos grandes e de cor bordô. Na lateral esquerda da imagem está fixado um grande jardim vertical de diferentes folhagens em tons de verde. ">
+                  <img src="imgs/figura_30.jpg" class="center-block img-responsive hidden-sm hidden-xs w-35" alt="A imagem mostra uma varanda com piso de pedra branca e um caminho demarcado com deques de madeira escura. Ao fundo da imagem e na lateral direita encontram-se plantas de espécies variadas em vasos grandes e de cor bordô. Na lateral esquerda da imagem está fixado um grande jardim vertical de diferentes folhagens em tons de verde. ">
                   <p class="no-print visible-sm visible-xs" aria-hidden="true">Toque na imagem para ampliá-la.</p>
-                  <a href="imgs/figura_30.jpg" target="_blank" class="no-print visible-sm visible-xs w-5" aria-hidden="true"><img src="imgs/figura_30.jpg" class="center-block img-responsive"></a>
+                  <a href="imgs/figura_30.jpg" target="_blank" class="no-print visible-sm visible-xs" aria-hidden="true"><img src="imgs/figura_30.jpg" class="center-block img-responsive"></a>
                   <p class="legenda-imagem">
                     Jardim vertical <br>Fonte: Acoustical Surfaces apud Souza (2021)
                   </p>
@@ -809,7 +809,7 @@
               <div id="collapse4" class="panel-collapse collapse" role="tabpanel" aria-labelledby="heading4">
                 <div class="panel-body">
                   <p>A tendência em jardim com vasos faz ampliar o cultivo de plantas em ambientes pequenos. Com os vasos, é possível trabalhar outra tendência, que são as hortas em casa, que incentivam a produção sustentável de alimentos. Isso reforça a tendência da simplicidade, trazendo o conceito de minimalismo para os jardins, no quais o mínimo de elementos facilita o cultivo e o dia a dia do usuário.</p>
-                  <img src="imgs/figura_33.jpg" class="center-block img-responsive hidden-sm hidden-xs w-5" alt=" A imagem mostra um jardim de vasos fixados em uma estrutura de madeira, formando uma horta para pequenos espaços. São nove vasos quadrados e retangulares distribuídos pela estrutura de madeira apoiada na parede. ">
+                  <img src="imgs/figura_33.jpg" class="center-block img-responsive hidden-sm hidden-xs w-35" alt=" A imagem mostra um jardim de vasos fixados em uma estrutura de madeira, formando uma horta para pequenos espaços. São nove vasos quadrados e retangulares distribuídos pela estrutura de madeira apoiada na parede. ">
                   <p class="no-print visible-sm visible-xs" aria-hidden="true">Toque na imagem para ampliá-la.</p>
                   <a href="imgs/figura_33.jpg" target="_blank" class="no-print visible-sm visible-xs w-5" aria-hidden="true"><img src="imgs/figura_33.jpg" class="center-block img-responsive"></a>
                   <p class="legenda-imagem">
