--- a/09_especies_vegetais/index.html
+++ b/09_especies_vegetais/index.html
@@ -85,7 +85,7 @@
             <p>O projeto paisagístico de interiores, chamado de jardinismo ou <i>plantscaping</i>, consiste na proposta de inserção de espécies vegetais no espaço interno do ambiente de forma a personalizar e destacar o espaço.</p>
             <p>Para fazer uso da vegetação adequadamente nos espaços internos é importante ter conhecimento das espécies vegetais, como suas características visuais e necessidades fisiológicas.</p>
             <p>Com relação à aparência visual da planta, é importante ter conhecimento do volume e dos atributos formais, pois o elemento principal da vegetação na criação do espaço é o volume, ou seja, o formato da sua massa. Há três tipos principais de estratos vegetais em relação ao seu porte: arbóreo, arbustivo e forração.</p>
-            <img src="imgs/1.jpg" class="center-block img-responsive hidden-sm hidden-xs print">
+            <img src="imgs/1.jpg" class="center-block img-responsive hidden-sm hidden-xs print w-70">
             <p class="no-print visible-sm visible-xs" aria-hidden="true">Toque na imagem para ampliá-la.</p>
             <a href="imgs/1.jpg" target="_blank" class="no-print visible-sm visible-xs" aria-hidden="true"><img src="imgs/1.jpg" class="center-block img-responsive"></a>
             <p class="legenda-imagem">
